src/yini_test/cases/golden/lenient/valid/strings/classic-triple-quoted-string.yini
@yini

^ Strings
message = C"""Line one\nLine two\tTabbed"""
