src/yini_test/cases/golden/lenient/invalid/strings/invalid-classic-escape.yini
@yini

^ Strings
message = C"bad unicode escape \u12"
